# Task-Manager

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: tasks.py
app/core/: database.py
app/models/: task.py  task_orm.py
migrations/: env.py
my-task-api/: Dockerfile  pyproject.toml
my-task-api/.github/workflows/: ci.yml
my-task-api/app/: main.py
my-task-api/app/models/: task.py
my-task-api/migrations/: env.py
tests/: test_tasks.py
